# vector-db

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  git-init-commits.sh  init-project.sh  pyproject.toml
docs/: ARCHITECTURE.md
examples/: README.md  run_all_examples.sh  run_api_tests.sh  run_cohere_example.sh  service_usage.py
examples/advanced/: 01_multi_library_search.py
examples/api/: 01_manage_libraries.py  01_rest_api_client.py  02_manage_chunks.py  03_search_operations.py  04_cohere_real_embeddings.py
examples/basic/: 01_create_library.py  02_vector_search.py
examples/benchmarks/: 01_index_comparison.py
examples/persistence/: 01_persistent_operations.py
examples/utils/: generate_embeddings.py
src/: main.py
src/api/: app.py  dependencies.py
src/api/endpoints/: __init__.py  chunks.py  health.py  libraries.py  search.py
src/api/middleware/: error_handler.py  logging.py
src/api/models/: __init__.py  chunk.py  common.py  library.py  search.py
src/core/: config.py  logging.py
src/core/exceptions/: __init__.py  base.py
src/core/indexes/: __init__.py  base.py  benchmark.py  factory.py  hnsw.py  kdtree.py  lsh.py
src/domain/: __init__.py  value_objects.py
src/domain/entities/: __init__.py  chunk.py  document.py  library.py
src/domain/repositories/: __init__.py  base.py  chunk.py  library.py
src/domain/value_objects/: __init__.py  search.py
src/infrastructure/locks/: __init__.py  manager.py  rwlock.py
src/infrastructure/persistence/: manager.py  recovery.py
src/infrastructure/repositories/: __init__.py  persistent_library_repository.py
src/services/: __init__.py  factory.py  persistence_aware_service.py  service_factory.py  service_interfaces.py  stub_implementations.py
src/services/chunk_service/: __init__.py  interface.py  service.py
src/services/library_service/: __init__.py  (+2 more)
tests/: conftest.py
tests/unit/: test_indexes.py  test_repositories.py  test_services.py
(+17 files in other folders)
